# my-api-adapter

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
