[project]
name = "my-api-adapter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "awslabs-openapi-mcp-server[yaml]>=0.2.4",
    "fastmcp>=2.12.3",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
]
